--- a/BetterTabControlTest/BetterTabControlTest.csproj
+++ b/BetterTabControlTest/BetterTabControlTest.csproj
@@ -58,6 +58,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="SampleData\SampleDataSource\SampleDataSource.xaml.cs" />
+    <Compile Include="TestDataGrid.xaml.cs">
+      <DependentUpon>TestDataGrid.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
@@ -76,6 +79,10 @@
     <Page Include="SampleData\SampleDataSource\SampleDataSource.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TestDataGrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Window1.xaml">
       <SubType>Designer</SubType>
