--- a/BetterTabControl/BetterTabControl.csproj
+++ b/BetterTabControl/BetterTabControl.csproj
@@ -15,8 +15,8 @@
     <RepositoryUrl>https://github.com/jbruflodt/BetterTabControl.git</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <AssemblyVersion>1.0.19274.1717</AssemblyVersion>
-    <FileVersion>1.0.19274.1717</FileVersion>
+    <AssemblyVersion>1.0.19278.1402</AssemblyVersion>
+    <FileVersion>1.0.19278.1402</FileVersion>
     <Version>$(AssemblyVersion)</Version>
     <PackageVersion>$(AssemblyVersion)</PackageVersion>
     <ShouldCreateLogs>True</ShouldCreateLogs>
@@ -45,6 +45,12 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Themes\Generic.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Themes\Generic.xaml">
